# url-shortener

./: .dockerignore  .env  .env.example  .env_test  .gitignore  Cargo.toml  Dockerfile  NOTES.md  docker-compose.yaml
.github/workflows/: ci.yml  publish.yml
crates/api-gateway/: .env.example  Cargo.toml
crates/api-gateway/src/: main.rs
crates/api-gateway/src/api/: mod.rs  server.rs  swagger.rs
crates/api-gateway/src/api/handlers/auth/: auth_handlers.rs
crates/api-gateway/src/api/handlers/users/: handlers.rs
crates/api-gateway/src/api/routes/: mod.rs
crates/api-gateway/src/application/: app.rs  config.rs  mod.rs  state.rs
crates/api-gateway/src/application/repository/: mod.rs
crates/api-gateway/src/application/security/: generate_tokens.rs
crates/api-gateway/src/application/service/auth/: auth_service.rs  mod.rs
crates/api-gateway/src/application/service/user/: user_service.rs  user_service_trait.rs
crates/api-gateway/src/domain/: mod.rs  validation_issue.rs
crates/api-gateway/src/domain/errors/: mod.rs  repository_error.rs  user_error.rs
crates/api-gateway/src/domain/traits/: mod.rs
crates/api-gateway/src/infrastructure/: mod.rs
crates/api-gateway/src/infrastructure/database/: database_error.rs  postgres.rs
crates/api-gateway/src/infrastructure/redis/: cache_error.rs  connect.rs  mod.rs
crates/auth/: Cargo.toml
crates/auth/src/: auth.rs  jwt.rs  lib.rs  roles.rs
crates/common/: Cargo.toml
crates/common/src/: cache_error.rs  lib.rs
crates/url-shortener/: Cargo.toml
crates/url-shortener/src/: main.rs
crates/url-shortener/src/api/: error.rs  extractors.rs  server.rs  swagger.rs
crates/url-shortener/src/api/handlers/: redirect.rs
crates/url-shortener/src/api/handlers/auth/: auth_handlers.rs  login_request.rs  mod.rs
crates/url-shortener/src/api/handlers/short_url/: create_short_url_request.rs  mod.rs  short_url_handlers.rs
crates/url-shortener/src/api/routes/: mod.rs
crates/url-shortener/src/application/: app.rs  config.rs  mod.rs  startup_error.rs  state.rs
crates/url-shortener/src/application/repository/: mod.rs  short_url_repository.rs  users_repository.rs
crates/url-shortener/src/application/security/: auth.rs  auth_error.rs  claims.rs  generate_tokens.rs  jwt.rs  mod.rs  roles.rs
crates/url-shortener/src/application/service/: mod.rs
crates/url-shortener/src/domain/: short_url_spec.rs  user_spec.rs
crates/url-shortener/src/domain/errors/: mod.rs  short_url_error.rs  user_error.rs
crates/url-shortener/src/domain/models/: mod.rs  user.rs
crates/url-shortener/src/domain/traits/: short_url_repository_trait.rs  users_repository_trait.rs
crates/url-shortener/src/infrastructure/messaging/: connect.rs  messaging_error.rs
crates/url-shortener/tests/: auth_tests.rs  health_test.rs  ready_test.rs  redirect_tests.rs  shorten_tests.rs  update_tests.rs  users_tests.rs
crates/url-shortener/tests/common/: mod.rs
k8s/: app-config.yaml  app-deployment.yaml  jaeger-service.yaml  postgres-statefulset.yaml
k8s/dev/: app-config.yaml  app-deployment.yaml  app-service.yaml  external-secrets.yaml  ingress.yaml  jaeger-deployment.yaml  jwt-secret.yaml  postgres-secret.yaml  postgres-service.yaml  postgres-statefulset.yaml  redis-deployment.yaml  redis-service.yaml  service-monitor.yaml
k8s/dev/olly/: grafana.dashboard.json  k6-dashboard.json
k8s/minikube/: app-deployment.yaml  jaeger-deployment.yaml  postgres-statefulset.yaml
load_tests/: k6-config-map.yaml  k6-job.yaml  k6.js
scripts/: coverage.sh
src/: lib.rs  main.rs
src/api/: error.rs  extractors.rs  mod.rs  server.rs  swagger.rs
src/api/handlers/: codes_handlers.rs  hello_world.rs  mod.rs  redirect.rs  short_url_handlers.rs
src/api/handlers/auth/: auth_handlers.rs  login_request.rs
src/api/handlers/short_url/: create_short_url_request.rs  create_short_url_response.rs  create_vanity_url_request.rs  handlers.rs  input_validation_rules.rs  mod.rs  short_url_error.rs  update_short_url_request.rs  validated_create_short_url_request.rs
src/api/handlers/users/: create_user_request.rs  handlers.rs  mod.rs  update_password_request.rs  user_response.rs
src/api/routes/: code_routes.rs  hello_routes.rs  mod.rs  redirect_routes.rs  short_url_routes.rs  users_routes.rs
src/application/: app.rs  config.rs  constants.rs  mod.rs  short_url_error.rs  startup_error.rs  state.rs
src/application/repository/: database_error.rs  mod.rs  short_url_repository.rs  users_repository.rs
src/application/security/: auth.rs  auth_error.rs  jwt.rs
src/application/service/: mod.rs
src/application/service/analytics/: analytics_publisher_trait.rs  mod.rs
src/application/service/auth/: auth_service.rs  auth_service_trait.rs  mod.rs  refresh_token_cache.rs
src/application/service/short_url/: code_generator.rs  mod.rs  redirect_cache.rs  redirect_cache_trait.rs  short_url_service.rs  short_url_service_trait.rs  short_url_spec.rs
src/application/service/user/: create_user_params.rs  mod.rs  user_service.rs  user_service_trait.rs  user_spec.rs
src/domain/: mod.rs  validation_issue.rs
src/domain/errors/: mod.rs  repository_error.rs  short_url_error.rs  user_error.rs
src/domain/models/: short_url.rs  user.rs
src/domain/models/short_url/: create_short_url_request.rs  create_short_url_response.rs  entity.rs  mod.rs  new_short_url_dto.rs  short_url.rs
src/domain/traits/: mod.rs  short_url_repository_trait.rs  users_repository_trait.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: database.rs  mod.rs  pool.rs  postgres.rs
src/infrastructure/database/migrations/: V1__create_short_url.sql  V2__create_users.sql  V3__create_short_url.sql
src/infrastructure/messaging/: mod.rs  rabbitmq.rs
src/infrastructure/redis/: cache_error.rs  connect.rs  mod.rs
tests/: auth_tests.rs  error_tests.rs  health_test.rs  ready_test.rs  redirect_tests.rs  retry_on_conflict_test.rs  shorten_tests.rs  update_tests.rs  users_tests.rs  vanity_tests.rs
tests/common/: constants.rs  helpers.rs  mod.rs  shared_container.rs  test_app.rs  test_db.rs  test_redis.rs
(+19 files in other folders)
