[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
base64-url = "3.0.2"
chrono = { version = "0.4.43", features = ["serde"] }
deadpool-postgres = "0.14.1"
deadpool-redis = { version = "0.23.0", features = ["rt_tokio_1", "serde"] }
dotenvy = "0.15.7"
rand = "0.10.0"
rand_core = { version = "0.6", features = ["getrandom"] }
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.48", features = ["full"] }
tokio-postgres = { version = "0.7.16", features = [
    "with-serde_json-1",
    "with-chrono-0_4",
    "with-uuid-1",
] }
tower-http = { version = "0.6.8", features = ["normalize-path"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
uuid = { version = "1.21.0", features = ["v7", "serde"] }
redis = { version = "1.0.5", features = ["tokio-comp"] }
async-trait = "0.1.89"
argon2 = "0.5.3"

[dev-dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
testcontainers = { version = "0.27.1", features = ["docker-compose"] }
testcontainers-modules = { version = "0.15.0", features = ["postgres", "redis"] }
