[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
auth = { path = "../auth" }
common = { path = "../common" }
axum.workspace = true
chrono.workspace = true
deadpool-postgres.workspace = true
deadpool-redis.workspace = true
dotenvy.workspace = true
refinery.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
url.workspace = true
uuid.workspace = true
redis.workspace = true
async-trait.workspace = true
axum-extra.workspace = true
metrics.workspace = true
jsonwebtoken.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
axum-prometheus.workspace = true