[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
ed25519-dalek = "2.2.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto", "use_pem"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["v7", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
rand = "0.10.0"
rand_core = { version = "0.6", features = ["getrandom"] }
tracing = "0.1.44"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }